--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^10.0.1",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "react": "^16.13.0",
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open"
   },
@@ -40,6 +40,12 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.2.0"
+    "@types/jest": "^25.1.5",
+    "axios-mock-adapter": "^1.18.1",
+    "cypress": "^4.2.0",
+    "fetch-mock": "^9.3.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "node-fetch": "^2.6.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
