--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^10.0.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "concurrently": "^5.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
@@ -22,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "serve": "json-server db.json --port 3001",
+    "cypress:open": "cypress open",
+    "dev": "concurrently \"yarn start\" \"yarn run serve\""
   },
   "eslintConfig": {
     "extends": "react-app"
