--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ cache:
 install:
   - yarn install --frozen-lockfile
 script:
-  - $(yarn bin)/run dev
-  - $(yarn bin)/cypress run --record
+  - yarn run dev
+  - $(yarn bin)/cypress run
