--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "concurrently": "^5.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
     "redux-thunk": "^2.3.0",
