--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.1"
   },
